--- a/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
+++ b/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
@@ -13,4 +13,8 @@
 5. 后缀ul或UL表示是unsigned long类型
 6. 带前缀0的整型常量表示它为八进制形式；前缀为0x或0X，则表示它为十六进制形式。
 7. 常量表达式是仅仅包含常量的表达式，这种表达式在编译时求值，而不在运行时求值。
-8. 字符串常量就是字符数组，字符串使用一个字符'\0'作为串的结尾，因此存储字符串的物理存储单元比括在双引号中的字符数多一个。
+8. 字符串常量就是字符数组，字符串使用一个字符'\0'作为串的结尾，因此存储字符串的物理存储单元比括在双引号中的字符数多一个。这种表示方法也说明，C语言对于字符串长度没有限制，但程序必须扫描完整个字符串后才能确定字符串的长度。
+9. 任何变量都可以使用const限定符限定。该限定符指定变量的值不能被修改。对数组而言，const限定符指定数组所有元素的值都不能被修改。
+10. 取模运算符%不能应用于float或double类型。在有负操作数的情况下，整数除法截取的方向以及取模运算结果的符号取决于具体机器的实现，这和处理上溢或下溢的情况是一样的。
+11. 关系运算符的优先级比算术运算符低。
+12. 运算符!=的优先级高于赋值运算符的优先级。
