--- a/日志/2020/0106-0112.md
+++ b/日志/2020/0106-0112.md
@@ -6,3 +6,11 @@ It's the first special case of parameter substitution in man bash:
 Use Default Values. If parameter is unset or null, the expansion of word is substituted. Otherwise, the value of parameter is substituted.
 
 In the case you mentioned, either the user has provided arguments on the command line and they will be used, or the user is asked to input them on standard input afterwards.
+
+---
+
+**Workspaces in yarn**
+
+Yarn Workspaces is a feature that allows users to install dependencies from multiple package.json files in subfolders of a single root package.json file, all in one go.
+
+Making Workspaces native to Yarn enables faster, lighter installation by preventing package duplication across Workspaces. Yarn can also create symlinks between Workspaces that depend on each other, and will ensure the consistency and correctness of all directories.
