--- a/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
+++ b/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
@@ -18,3 +18,13 @@
 10. 取模运算符%不能应用于float或double类型。在有负操作数的情况下，整数除法截取的方向以及取模运算结果的符号取决于具体机器的实现，这和处理上溢或下溢的情况是一样的。
 11. 关系运算符的优先级比算术运算符低。
 12. 运算符!=的优先级高于赋值运算符的优先级。
+13. 当一个运算符的几个操作数类型不同时，就需要通过一些规则把它们转换为某种共同的类型。自动转换是把“比较窄”操作数转换为“比较宽的”操作数，并且不丢失信息的转换。由于char类型就是较小的整型，因此在算术表达式中可以自由使用char类型的变量。
+14. s[i]-'0'能够计算出s[i]中存储的字符所对应的数字值，这是因为'0', '1'等在字符集中对应的数值是一个连续的递增序列。
+15. C语言的定义保证了机器的标准打印字符集中的字符不会是负值，因此，在表达式中这些字符总是正值。但是，存储在字符变量中的位模式在某些机器中可能是负的，而在另一些机器上可能是正的。
+16. 当关系表达式以及由&&、||连接的逻辑表达式的判定结果为真时，表达式的值为1，当判定结果为假时，表达式的值为0。
+17. 类型转换规则：
+    - 如果其中一个操作数的类型是long double，则将另一个操作数转为long double类型；
+    - 如果其中一个操作数的类型是double，则将另一个操作数转换为double类型，表达式中float类型不会自动转换为double类型；
+    - 如果其中一个操作数的类型是float，则将另一个操作数转为float类型；
+    - 将char与short类型的操作数转为int类型；
+    - 如果其中一个操作数的类型为long，则将另一个操作数也转换为long类型；
