--- a/日志/2020/0106-0112.md
+++ b/日志/2020/0106-0112.md
@@ -14,3 +14,20 @@ In the case you mentioned, either the user has provided arguments on the command
 Yarn Workspaces is a feature that allows users to install dependencies from multiple package.json files in subfolders of a single root package.json file, all in one go.
 
 Making Workspaces native to Yarn enables faster, lighter installation by preventing package duplication across Workspaces. Yarn can also create symlinks between Workspaces that depend on each other, and will ensure the consistency and correctness of all directories.
+
+---
+
+**[Improving Performance in React Functional Components using React.memo()](https://blog.bitsrc.io/improve-performance-in-react-functional-components-using-react-memo-b2e80c11e15a)**
+
+Speed up React apps:
+1. Suspense and Lazy Load `(React.lazy(…), <Suspense/>)`
+2. Pure Component
+3. `shouldComponentUpdate(…) {…}` life-cycle hook
+4. React.memo
+
+out-of-the-box: 开箱即用
+
+---
+
+**[Better Reusable React Components with the Overrides Pattern](https://medium.com/@dschnr/better-reusable-react-components-with-the-overrides-pattern-9eca2339f646)**
+
