--- a/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
+++ b/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
@@ -28,3 +28,14 @@
     - 如果其中一个操作数的类型是float，则将另一个操作数转为float类型；
     - 将char与short类型的操作数转为int类型；
     - 如果其中一个操作数的类型为long，则将另一个操作数也转换为long类型；
+
+18. 一般来说，数学函数使用双精度类型的变量。使用float类型主要是为了在使用较大的数组时节省存储空间，有时也为了节省机器执行时间（双精度运算特别费时）。
+19. 无论是否进行符号扩展，字符型变量都将被转换为整型变量。
+20. 在任何表达式中都可以使用一个称为强制类型转换的一元运算符强制进行显式类型转换。（类型名）表达式。
+21. C语言提供了6个位操作运算符。这些运算符只能作用于整型操作数，即只能作用于带符号或无符号的char、short、int与long类型：
+    - & 按位与
+    - | 按位或
+    - ^ 按位异或
+    - << 左移
+    - >> 右移
+    - ~ 按位求反
