--- a/日志/2020/0106-0112.md
+++ b/日志/2020/0106-0112.md
@@ -33,3 +33,42 @@ out-of-the-box: 开箱即用
 
 ---
 
+**JS中的值是按值传递，还是按引用传递？**
+
+按值传递(call by value)是最常用的求值策略：函数的形参是被调用时所传实参的副本。修改形参的值并不会影响实参。
+
+按引用传递(call by reference)时，函数的形参接收实参的隐式引用，而不再是副本。这意味着函数形参的值如果被修改，实参也会被修改。同时两者指向相同的值。
+
+JS的基本类型，是按值传递的。
+```javascript
+var a = 1;
+function foo(x) {
+    x = 2;
+}
+foo(a);
+console.log(a); // 仍为1, 未受x = 2赋值所影响
+```
+
+准确的说，JS中的基本类型按值传递，对象类型按共享传递的(call by sharing，也叫按对象传递、按对象共享传递)。最早由Barbara Liskov. 在1974年的GLU语言中提出。该求值策略被用于Python、Java、Ruby、JS等多种语言。
+
+该策略的重点是：调用函数传参时，函数接受对象实参引用的副本(既不是按值传递的对象副本，也不是按引用传递的隐式引用)。 它和按引用传递的不同在于：在共享传递中对函数形参的赋值，不会影响实参的值。如下面例子中，不可以通过修改形参o的值，来修改obj的值。
+```javascript
+var obj = {x : 1};
+function foo(o) {
+    o = 100;
+}
+foo(obj);
+console.log(obj.x); // 仍然是1, obj并未被修改为100.
+```
+
+然而，虽然引用是副本，引用的对象是相同的。它们共享相同的对象，所以修改形参对象的属性值，也会影响到实参的属性值。
+```javascript
+var obj = {x : 1};
+function foo(o) {
+    o.x = 3;
+}
+foo(obj);
+console.log(obj.x); // 3, 被修改了!
+```
+
+对于对象类型，由于对象是可变(mutable)的，修改对象本身会影响到共享这个对象的引用和引用副本。而对于基本类型，由于它们都是不可变的(immutable)，按共享传递与按值传递(call by value)没有任何区别，所以说JS基本类型既符合按值传递，也符合按共享传递。
