--- a/阅读笔记/C程序设计语言/第四章：函数与程序结构.md
+++ b/阅读笔记/C程序设计语言/第四章：函数与程序结构.md
@@ -4,3 +4,20 @@
 
 1. c语言程序一般都由许多小的函数组成，而不是由少量较大的函数组成。一个程序文件可以保存在一个或多个源文件中。各个源文件可以单独编译，并可以与库中已编译过的函数一起加载。
 2. 调用函数可以忽略返回值，并且，return语句的后面也不一定需要表达式。当return语句后面没有表达式时，函数将不向调用者返回值。当被调用函数执行到最后的花括号而结束执行时，控制同样也会返回给调用者。
+3. C语言程序可以看成由一系列的外部对象构成，这些外部对象可能是变量或者函数。形容词external与internal是相对的，internal用于描述定义在函数内部的函数参数及变量。外部变量定义在函数之外，因此可以在许多函数中使用。
+4. 外部变量与函数具有下列性质：通过同一个名字对外部变量的所有引用（即使这种引用来自于单独编译的不同函数）实际上都是引用同一个对象（标准中把这一性质称为外部链接）。
+5. 如果函数之间需要共享大量的变量，使用外部变量要比使用一个很长的参数表更方便、有效。但是这种方式可能对程序结构产生不良的影响，而且可能会导致程序中各个函数之间具有太多的数据联系。
+6. 外部变量的用途还表现在它们与内部变量相比具有更大的作用域和更长的生存期。自动变量只能在函数内部使用，从其所在的函数被调用开始存在，在函数退出时变量也将消失。而外部变量是永久存在的，它们的值在一次函数调用到下一次函数调用之间保持不变。
+7. 对于某些中等规模的程序，最好只用一个头文件存放各部分共享的对象。
+8. 静态变量：用static声明
+9. 寄存器变量：用register声明，告诉编译器，它所声明的变量在程序中使用频率较高。其思想是，将register变量放在机器的寄存器中，这样可以使程序更小、执行速度更快。但编译器可以忽略此选项。
+10. 无论寄存器变量实际上是不是存放在寄存器中，它的地址都是不能访问的。在不同的机器中，对寄存器变量的数目和类型的具体限制也是不同的。
+11. 初始化：在不进行显式初始化的情况下，外部变量和静态变量都将被初始化为0，而自动变量和寄存器变量的初始值则没有定义。
+12. 对于外部变量和静态变量来说，初始化表达式必须是常量表达式，且只初始化一次。对于自动变量与寄存器变量，则在每次进入函数程序块时都将被初始化。
+13. 对于自动变量与寄存器变量来说，初始化表达式可以不是常量表达式，表达式中可以包含任意在此表达式之前已经定义的值，包括函数调用。
+14. 数组的初始化可以在声明的后面紧跟一个初始化表达式列表，初始化表达式列表用花括号括起来，各初始化表达式之间通过逗号分割。
+15. 文件包含指令，即#include指令
+16. 宏替换：宏定义的形式如下，#define 名字 替换文本。这是一种最简单的宏替换——后续所有出现名字记号的地方都将被替换为替换文本。
+17. 可以通过#undef指令取消名字的宏定义，这样做可以保证后续的调用是函数调用而不是宏调用。
+18. 条件包含：还可以使用条件语句对预处理本身进行控制，这种条件语句的值是在预处理执行的过程中计算。这种方式为编译过程中根据计算所得的条件值选择性的包含不同代码提供了一种手段。
+19. C语言专门定义了两个预处理语句#ifdef与#ifndef，它们用来测试某个名字是否已经定义。
