--- a/阅读笔记/C程序设计语言/第五章：指针与数组.md
+++ b/阅读笔记/C程序设计语言/第五章：指针与数组.md
@@ -11,3 +11,11 @@
 7. 一元运算符*和&的优先级比算术运算符的优先级高。
 8. c语言中是以传值的方式将参数值传递给被调用函数，因此，被调用函数不能直接修改主调函数中变量的值。如果主调函数将所要修改的变量的指针传递给被调函数，即可实现。
 9. 指针参数使得被调用函数能够访问和修改主调函数中对象的值。
+10. 通过数组下标编写的程序执行速度更快，但另一方面，用指针实现的程序理解起来稍微困难一些。
+11. 一个通过数组和下标实现的表达式可等价的通过指针和偏移量实现。
+12. 数组名和指针之间有一个不同之处，指针是一个变量，数组名不是变量，指针执行自增运算是合法的。
+13. 当把数组名传递给一个函数时，实际上传递的是该数组第一个元素的地址。在被调用函数中，该参数是一个局部变量，因此，数组名参数必须是一个指针，也就是一个存储地址值的变量。
+14. 任何指针与0进行相等或不等的比较运算都有意义。但是，指向不同数组的元素的指针之间的算数或比较运算没有意义。这里有一个特例：指针的算术运算中可以使用数组最后一个元素的下一个元素的地址。
+15. 指针可以和整数进行相加或相减运算，例如：p+n，表示指针当前指向的对象之后n个对象的地址。在计算p+n时，n将根据p指向的对象的长度按比例缩放，而p指向的对象的长度则取决于p的声明。例如，如果int类型占4个字节的存储空间，那么在int类型的计算中，对应的n将按4的倍数来运算。
+16. 指针的减法运算也是有意义的：如果p和q指向相同数组中的元素，且`p<q`，那么`q-p+1`则表示位于p和q指向的元素之间的元素的数目。
+17. 字符串常量是一个字符数组，在字符串的内部表示中，字符数组以空字符'\0'结尾，所以程序可以通过检查空字符找到字符数组的结尾。字符串常量占据的存储单元数也因此比双引号内的字符数大1。
