--- a/阅读笔记/C程序设计语言/第五章：指针与数组.md
+++ b/阅读笔记/C程序设计语言/第五章：指针与数组.md
@@ -19,3 +19,11 @@
 15. 指针可以和整数进行相加或相减运算，例如：p+n，表示指针当前指向的对象之后n个对象的地址。在计算p+n时，n将根据p指向的对象的长度按比例缩放，而p指向的对象的长度则取决于p的声明。例如，如果int类型占4个字节的存储空间，那么在int类型的计算中，对应的n将按4的倍数来运算。
 16. 指针的减法运算也是有意义的：如果p和q指向相同数组中的元素，且`p<q`，那么`q-p+1`则表示位于p和q指向的元素之间的元素的数目。
 17. 字符串常量是一个字符数组，在字符串的内部表示中，字符数组以空字符'\0'结尾，所以程序可以通过检查空字符找到字符数组的结尾。字符串常量占据的存储单元数也因此比双引号内的字符数大1。
+18. C语言中二维数组的使用方式和其他语言一样，数组元素按行存储，因此，当按存储顺序访问数组时，最右边的数组下标变化的最快。
+19. 如果将二维数组作为参数传递给函数，那么在函数的声明中必须指明数组的列数，和数组的行数没有太大关系，因为函数调用传递的是一个指针，它指向由行向量构成的一维数组。
+20. `int (*daytab)[13]`声明了一个指针，表明它指向具有13个整型元素的一维数组。方括号的优先级高于*，所以必须使用圆括号。
+21. `int *daytab[13]`相当于声明了一个数组，该数组有13个元素，其中每个元素都是一个指向整型对象的指针。
+22. 指针数组的一个重要优点在于，数组的每一行长度可以不同。
+23. 指针数组最频繁的用处是存放具有不同长度的字符串。
+24. 在支持C语言的环境中，可以在程序开始执行时将命令行参数传递给程序。调用主函数main时，它带有两个参数。第一个参数（习惯上称为argc，用于参数计算）的值表示运行程序时命令行中参数的数目。第二个参数（称为argv，用于参数向量）是一个指向字符串数组的指针，其中每个字符串对应一个参数。通常用多级指针处理这些字符串。
+25. 按照C语言的约定，argv[0]的值是启动该程序的程序名，因此argc的值至少为1。如果argc的值为1，则说明程序后面没有命令行参数。
