--- a/日志/2020/0127-0202.md
+++ b/日志/2020/0127-0202.md
@@ -12,3 +12,36 @@ js引擎：javaScript的解释、编译、执行主流内核：Trident(IE)、Gec
 
 How React Native Works
 React Native provides a way to build native cross platform mobile apps using JavaScript. React Native is similar to React in that it allows developers to create declarative user interfaces in JavaScript, for which it internally creates a hierarchy tree of UI elements or in React terminology a virtual DOM. Whereas the output of ReactJS targets a browser, React Native translates the virtual DOM into mobile native views using platform native bindings that interface with application logic in JavaScript.
+
+---
+
+**[TypeScript enums: How do they work? What can they be used for?](https://2ality.com/2020/01/typescript-enums.html)**
+
+- Each enum member has a name and a value. The default for enums is to be numeric.
+- TypeScript only supports numbers and strings as enum member values. Other values, such as symbols, are not allowed.
+- TypeScript distinguishes three ways of specifying enum member values:
+  - Literal enum members are initialized
+  - Constant enum members are initialized via expressions whose results can be computed at compile time.
+  - Computed enum members are initialized via arbitrary expressions.
+- An enum member is constant if its value can be computed at compile time.
+- TypeScript compiles enums to JavaScript objects.
+
+```typescript
+enum NoYes {
+  No = 'No',
+  Yes = 'Yes',
+}
+function func(x: NoYes.No) {
+  return x;
+}
+
+func(NoYes.No); // OK
+
+//@ts-ignore: Argument of type '"No"' is not assignable to
+//            parameter of type 'NoYes.No'.
+func('No');
+
+//@ts-ignore: Argument of type 'NoYes.Yes' is not assignable to
+//            parameter of type 'NoYes.No'.
+func(NoYes.Yes);
+```
