--- a/日志/2020/0127-0202.md
+++ b/日志/2020/0127-0202.md
@@ -45,3 +45,75 @@ func('No');
 //            parameter of type 'NoYes.No'.
 func(NoYes.Yes);
 ```
+
+---
+
+**[What does 'source' do?](https://superuser.com/questions/46139/what-does-source-do)**
+
+source is a bash shell built-in command that executes the content of the file passed as argument, in the current shell. It has a synonym in . (period).
+
+```shell
+. filename [arguments]
+
+source filename [arguments]
+```
+
+Be careful! `./` and `source` are not quite the same.
+
+- `./script` runs the script as an executable file, launching a new shell to run it
+- `source script` reads and executes commands from filename in the current shell environment
+
+Note: `./script` is not `. script`, but `. script == source script`
+
+---
+**[Is there a difference between “.” and “source” in bash, after all?](https://askubuntu.com/questions/182012/is-there-a-difference-between-and-source-in-bash-after-all?lq=1)**
+
+Generally speaking, you can run any executable file in a shell by invoking it with a name that contains at least one `/` character. To run a file in the current directory, preceding it by `./` is thus the easiest way. Unless the current directory is in your `PATH`, you cannot run the script with the command `testenv.sh`. This is to prevent people from accidentally executing files in the current directory when they intend to execute a system command or some other file that exists in some directory listed in the `PATH` environment variable.
+
+When you invoke an executable by name as above (and not with the . or source shell built-ins), what shell program is used to run it is not usually determined by what shell you're running it from.
+
+---
+
+**[How to Set Environment Variables in Linux](https://www.serverlab.ca/tutorials/linux/administration-linux/how-to-set-environment-variables-in-linux/)**
+
+**Setting an Environment Variable**
+To set an environment variable the export command is used. We give the variable a name, which is what is used to access it in shell scripts and configurations, and then a value to hold whatever data is needed in the variable.
+
+```shell
+export NAME=VALUE
+```
+
+**Unsetting an Environment Variable**
+To unset an environment variable, which removes its existence all together, we use the unset command. Simply replace the environment variable with an empty string will not remove it, and in most cases will likely cause problems with scripts or application expecting a valid value.
+
+```shell
+unset VARIABLE_NAME
+```
+
+**Listing All Set Environment Variables**
+
+To list all environment variables, we simply use the set command without any arguments.
+```shell
+set
+```
+
+When an environment variable is set from the shell using the export command, its existence ends when the user’s sessions ends.
+
+To make an environment persistent for a user’s environment, we export the variable from the user’s profile script.
+
+```
+// Open the current user’s profile into a text editor
+vi ~/.bash_profile
+
+// Add the export command for every environment variable you want to persist.
+export JAVA_HOME=/opt/openjdk11
+
+// Save your changes.
+```
+Adding the environment variable to a user’s bash profile alone will not export it automatically. However, the variable will be exported the next time the user logs in.
+
+**Setting Persistent Global Environment Variables**
+All global profile settings are stored under /etc/profile. And while this file can be edited directory, it is actually recommended to store global environment variables in a directory named /etc/profile.d, where you will find a list of files that are used to set environment variables for the entire system.
+
+---
+
