--- a/日志/2020/0127-0202.md
+++ b/日志/2020/0127-0202.md
@@ -1,10 +1,10 @@
-**简述Chromium, CEF, Webkit, JavaScriptCore, V8, Blink**
+**简述 Chromium, CEF, Webkit, JavaScriptCore, V8, Blink**
 
 浏览器内核概念
-浏览器内核分为两部分：渲染引擎（render engin）、js引擎(js engin)
+浏览器内核分为两部分：渲染引擎（render engin）、js 引擎(js engin)
 
-渲染引擎：负责对网页语法的解释（HTML、javaScript、引入css等），并渲染（显示）网页
-js引擎：javaScript的解释、编译、执行主流内核：Trident(IE)、Gecko(FireFox)、Webkit(Safari)、Presto(opera前内核、已废弃)、blink(Chrome)
+渲染引擎：负责对网页语法的解释（HTML、javaScript、引入 css 等），并渲染（显示）网页
+js 引擎：javaScript 的解释、编译、执行主流内核：Trident(IE)、Gecko(FireFox)、Webkit(Safari)、Presto(opera 前内核、已废弃)、blink(Chrome)
 
 ---
 
@@ -66,6 +66,7 @@ Be careful! `./` and `source` are not quite the same.
 Note: `./script` is not `. script`, but `. script == source script`
 
 ---
+
 **[Is there a difference between “.” and “source” in bash, after all?](https://askubuntu.com/questions/182012/is-there-a-difference-between-and-source-in-bash-after-all?lq=1)**
 
 Generally speaking, you can run any executable file in a shell by invoking it with a name that contains at least one `/` character. To run a file in the current directory, preceding it by `./` is thus the easiest way. Unless the current directory is in your `PATH`, you cannot run the script with the command `testenv.sh`. This is to prevent people from accidentally executing files in the current directory when they intend to execute a system command or some other file that exists in some directory listed in the `PATH` environment variable.
@@ -93,6 +94,7 @@ unset VARIABLE_NAME
 **Listing All Set Environment Variables**
 
 To list all environment variables, we simply use the set command without any arguments.
+
 ```shell
 set
 ```
@@ -110,6 +112,7 @@ export JAVA_HOME=/opt/openjdk11
 
 // Save your changes.
 ```
+
 Adding the environment variable to a user’s bash profile alone will not export it automatically. However, the variable will be exported the next time the user logs in.
 
 **Setting Persistent Global Environment Variables**
@@ -117,3 +120,24 @@ All global profile settings are stored under /etc/profile. And while this file c
 
 ---
 
+**[Export Command in Linux](https://www.journaldev.com/28251/export-command-linux)**
+
+---
+
+**[Yarn 2 features](https://dev.to/arcanis/introducing-yarn-2-4eh1)**
+
+- Optimizations of CLI output: allmost all messages now have their own error codes that can be searched in documentation.
+- Some CLI features:
+  - `yarn up <name>` will upgrade a package in all workspaces at ones.
+  - `yarn add -i <name>` will offer to reuse the same version as the ones used by your other workspaces.
+- The specific goal of yarn: make your projects as stable and fast as possible. Yarn now reads the vendor files directly from the cache, if the cache becomes part of your repository then you never need to run yarn install again.
+- New Command `yarn dlx`: The same thing lik `npx`, but more secure than `npx`. The `npx` command will execute both remote and local scripts, there is a decent risk that a typo could open a door to an attacker. The `yarn dlx` command only downloads and executes remote scripts, never local ones. If you want to run local scripts, you are always runable through `yarn run` or directly by file name.
+- New Command `yarn workspaces foreach`: Running a command over multiple repositories.
+- New Protocol `patch:`: This protocol can be used whenever you need to apply changes to a specific package in your dependency tree.
+- New Protocol `portal:`: This protocol is similar to `link:` protocol. It's used to tell Yarn to create a symlink to any folder on your local disk. The `portal:` protocol is used to creat a symlink to any package folder.
+- Build Dependency Tracking: Yarn2 will keep track of the individual dependency trees for each package that lists postinstall script, and only run them when those dependency trees changed in some way.
+- Normalized Shell: Yarn2 will cross platform.
+- New Lockfile Format: The format for both lockfile and configuration files changed to pure YAML.
+- Strict Package Boundaries: Packages are not allowed to require other packages unless they actually list them in their dependencies.
+- Deprecating Bundle Dependencies: bundleDependencies
+- Read-Only Packages: The cache archives are mounted as read-only drives and cannot be modified.
