--- a/阅读笔记/C程序设计语言/第五章：指针与数组.md
+++ b/阅读笔记/C程序设计语言/第五章：指针与数组.md
@@ -27,3 +27,8 @@
 23. 指针数组最频繁的用处是存放具有不同长度的字符串。
 24. 在支持C语言的环境中，可以在程序开始执行时将命令行参数传递给程序。调用主函数main时，它带有两个参数。第一个参数（习惯上称为argc，用于参数计算）的值表示运行程序时命令行中参数的数目。第二个参数（称为argv，用于参数向量）是一个指向字符串数组的指针，其中每个字符串对应一个参数。通常用多级指针处理这些字符串。
 25. 按照C语言的约定，argv[0]的值是启动该程序的程序名，因此argc的值至少为1。如果argc的值为1，则说明程序后面没有命令行参数。
+26. ANSI标准要求argv[argc]的值必须为一个空指针。
+27. UNIX系统中的C语言程序有一个公共的约定：以负号开头的参数表示一个可选标志或参数。
+28. 在C语言中，函数本身不是变量，但可以定义指向函数的指针。这种类型的指针可以被赋值、存放在数组中、传递给函数以及作为函数的返回值等等。
+29. `int *f();`表示f是一个函数，它返回一个指向int类型的指针
+30. `int (*pf)();`表示pf是一个指向函数的指针，该函数返回一个int类型的对象
