--- a/阅读笔记/C程序设计语言/第六章：结构.md
+++ b/阅读笔记/C程序设计语言/第六章：结构.md
@@ -1,3 +1,11 @@
 # C程序设计语言
 
 ## 第六章：结构
+
+1. 结构是一个或多个变量的集合，这些变量可能为不同的类型，为了处理的方便而将这些变量组织在一个名字之下。
+2. 关键字struct引入结构声明。结构声明由包含在花括号内的一系列声明组成。关键字struct后面的名字是可选的，称为结构标记。结构标记用于为结构命名，在定义之后，结构标记就代表花括号内的声明，可以用它作为该声明的简写形式。
+3. 结构中定义的变量称为成员。结构成员、结构标记和普通变量可以采用相同的名字，它们之间不会冲突，因为通过上下文分析可以对它们进行区分。另外，不同结构中的成员可以使用相同的名字。
+4. 结构的合法操作只有几种：作为一个整体复制和赋值，通过&运算符取地址，访问其成员。其中复制和赋值包括向函数传递参数以及从函数返回值。
+5. 如果传递给函数的结构很大，使用指针方式的效率通常比复制整个结构的效率要高。结构指针类似于普通变量指针。声明 `struct point *pp`,将pp定义为一个指向struct point类型对象的指针。如果pp指向一个point结构，那么*pp即为该结构，而`(*pp).x`和`(*pp).y`则是结构成员。
+6. 结构指针使用频率非常高，为了使用方便，C语言提供了另一种简写方式，假设p是一个指向结构的指针，访问结构成员时可用 p->结构成员
+7. C语言提供了一个编译时一元运算符sizeof，它可用来计算任一对象的长度。`sizeof 对象`，将返回一个整型值，它等于指定对象或类型占用的存储空间字节数。
