--- a/日志/2020/0210-0216.md
+++ b/日志/2020/0210-0216.md
@@ -41,3 +41,5 @@ A: In computer programming, a static variable is a variable that has been alloca
 A: Memory is allocated as required at run time.
 
 ---
+
+**[🚀 Visualizing memory management in V8 Engine (JavaScript, NodeJS, Deno, WebAssembly)](https://deepu.tech/memory-management-in-v8/)**
