--- a/日志/2020/0210-0216.md
+++ b/日志/2020/0210-0216.md
@@ -43,3 +43,27 @@ A: Memory is allocated as required at run time.
 ---
 
 **[🚀 Visualizing memory management in V8 Engine (JavaScript, NodeJS, Deno, WebAssembly)](https://deepu.tech/memory-management-in-v8/)**
+
+---
+
+**[argc and argv](http://crasseux.com/books/ctutorial/argc-and-argv.html)**
+
+Summary:
+- The name of the variable argc stands for "argument count". "argc" contains the number of argument that passed to the program.
+- The "argv" variable stands for "argument vector". This is a one-dimensional array, and argv is a one-dimensional array of strings. Each string is one of the arguments that was passed to the program.
+
+---
+
+**[缓冲输入与非缓冲输入](https://blog.csdn.net/Johan_Joe_King/article/details/84749703)**
+
+缓冲区：
+1、对于立即回显，不需要缓冲区，即非缓冲输入，输入的内容程序立即可用
+2、对于延迟回显，会有一个缓冲区存放输入的若干个字符，并在按下回车的时候将字符串交给程序使用，并清空缓存
+
+为什么需要缓冲区：
+1、将若干个字符作为一个块发送给程序比把字符逐个发送要来得更快，这是输入长字符串时缓冲输入的优势
+2、容错性，主要是容用户的错，比如输入hello却输入成了jello，用户发现后还来得及修改，但非缓冲输入就没有机会了
+
+缓冲输入的缓存分为两类：
+1、完全缓冲I/O：缓冲区满的时候被清空，缓冲内容发送到目的地，常见于文件输入
+2、行缓冲I/O：典型的就是键盘输入，回车换行的时候清空缓存，内容发送到目的地
