--- a/阅读笔记/C程序设计语言/第六章：结构.md
+++ b/阅读笔记/C程序设计语言/第六章：结构.md
@@ -9,3 +9,5 @@
 5. 如果传递给函数的结构很大，使用指针方式的效率通常比复制整个结构的效率要高。结构指针类似于普通变量指针。声明 `struct point *pp`,将pp定义为一个指向struct point类型对象的指针。如果pp指向一个point结构，那么*pp即为该结构，而`(*pp).x`和`(*pp).y`则是结构成员。
 6. 结构指针使用频率非常高，为了使用方便，C语言提供了另一种简写方式，假设p是一个指向结构的指针，访问结构成员时可用 p->结构成员
 7. C语言提供了一个编译时一元运算符sizeof，它可用来计算任一对象的长度。`sizeof 对象`，将返回一个整型值，它等于指定对象或类型占用的存储空间字节数。
+8. C语言提供了一个称为typedef的功能，它用来建立新的数据类型名。typedef声明并没有创建一个新类型，它只是为某个已存在的类型增加了一个新的名称而已。typedef声明也没有增加任何新的语义：通过这种方式声明的变量与通过普通声明方式声明的变量具有完全相同的属性。
+9. 联合：联合是可以在不同时刻保存不同类型和长度的对象的变量，编译器负责跟踪对象的长度和对齐要求。联合提供了一种方式，以在单块存储区中管理不同类型的数据，而不需要在程序中嵌入任何同机器有关的信息。
