--- a/日志/2020/0210-0216.md
+++ b/日志/2020/0210-0216.md
@@ -67,3 +67,40 @@ Summary:
 缓冲输入的缓存分为两类：
 1、完全缓冲I/O：缓冲区满的时候被清空，缓冲内容发送到目的地，常见于文件输入
 2、行缓冲I/O：典型的就是键盘输入，回车换行的时候清空缓存，内容发送到目的地
+
+---
+
+**[How to Create a File in Linux](https://linuxize.com/post/create-a-file-in-linux/)**
+
+**Creating a File with touch Command**
+```shell
+touch file1.txt
+```
+If the file file1.txt doesn’t exist the command above will create it, otherwise, it will change its timestamps.
+
+**Creating a File with the Redirection Operator**
+```shell
+> file1.txt
+```
+The `>` operator will overwrite an existing file, while the `>>` operator will append the output to the file.
+
+**Creating a File with cat Command**
+```shell
+cat > file1.txt
+```
+
+**Creating a File with echo Command**
+```shell
+echo "Some line" > file1.txt
+```
+
+**Creating a File using Heredoc**
+```shell
+<< EOF > file1.txt
+Some line
+Some other line
+EOF
+```
+
+
+
