--- a/日志/2020/0210-0216.md
+++ b/日志/2020/0210-0216.md
@@ -102,5 +102,13 @@ Some other line
 EOF
 ```
 
+---
+**[Linux chmod command](https://www.computerhope.com/unix/uchmod.htm)**
 
+The letters u, g, and o stand for "user", "group", and "other". The "a" standards for all users.
 
+```shell
+-rwxrw-r-- 1   hope   hopestaff  123   Feb 03 15:36   file.txt
+```
+
+The first character represents the file type: "-" for a regular file, "d" for a directory, "l" for a symbolic link.
