--- a/日志/2020/0210-0216.md
+++ b/日志/2020/0210-0216.md
@@ -103,6 +103,7 @@ EOF
 ```
 
 ---
+
 **[Linux chmod command](https://www.computerhope.com/unix/uchmod.htm)**
 
 The letters u, g, and o stand for "user", "group", and "other". The "a" standards for all users.
@@ -112,3 +113,9 @@ The letters u, g, and o stand for "user", "group", and "other". The "a" standard
 ```
 
 The first character represents the file type: "-" for a regular file, "d" for a directory, "l" for a symbolic link.
+
+---
+
+**[What is the Difference Between Machine Code and Bytecode](https://pediaa.com/what-is-the-difference-between-machine-code-and-bytecode/)**
+
+The main difference between machine code and bytecode is that the machine code is a set of instructions in machine language or binary that can be directly executed by the CPU while the bytecode is an intermediate code generated from compiling a source code which can be executed by a virtual machine.
