--- a/阅读笔记/鸟哥的Linux私房菜/第12章：正则表达式与文件格式化处理.md
+++ b/阅读笔记/鸟哥的Linux私房菜/第12章：正则表达式与文件格式化处理.md
@@ -12,3 +12,31 @@
 
 6. `.*`代表零个或多个任意字符的意思。
 7. 限定连续RE字符范围`{}`
+8. 基础正则表达式字符：
+
+|RE字符|意义与范例|
+|:-|:-|
+|`^word`|意义：待查找的字符串(word)在行首|
+|`word$`|意义：待查找的字符串(word)在行尾|
+|`.`|意义：代表一定有一个任意字符的字符|
+|`\`|意义：转义字符|
+|`*`|意义：重复零个到无穷多个的前一个字符|
+|`[list]`|意义：从字符集合的RE字符里面找出想要选取的字符|
+|`[n1-n2]`|意义：从字符集合里面找出想要选取的字符范围|
+|`[^list]`|意义：从字符集合里面找出不要的字符串或范围|
+|`\{n,m\}`|意义：连续n到m个的前一个RE字符|
+
+9. sed命令：将数据进行替换、删除、新增、选取特定行。
+10. 扩展正则表达式：
+
+|RE字符|意义与范例|
+|`+`|重复一个或一个以上的前一个RE字符|
+|`?`|零个或一个前一个RE字符|
+|`|`|用或(or)的方式找出数个字符串|
+|`()`|找出“组”字符串|
+|`()+`|多个重复组的判别|
+
+11. printf: 格式化打印命令
+12. awk: 数据处理工具。相比于sed常常作用于一整行的处理，awk则比较倾向于将一行分成数个“字段”来处理。
+13. diff: 用在比较两个文件之间的区别，并且是以行为单位来比较的。一般是用在ASC2纯文本文件的比较上。由于是以行为比较的单位，因此diff通常是用在同一的文件的新旧版本区别上。不能用diff去比较两个完全不相干的文件，以为比较不出个结果来。
+14. cmp: 以字节为单位去比较两个文件
