--- a/日志/2020/0309-0315.md
+++ b/日志/2020/0309-0315.md
@@ -16,3 +16,10 @@
 2. No work during import: When imported, the module shouldn’t execute any heavy work. Rather, the consumer should decide when to perform runtime operations.
 3. Favor high cohesion modules: Favor high cohesion modules whose functions, classes, variables are closely related and perform a common task. Refactor big low cohesion modules by splitting them into multiple high cohesion ones.
 4. Avoid long relative paths: Use absolute paths instead of the long relative paths.
+
+---
+
+**[What is a Higher-Order Function?](https://typeofnan.dev/what-is-a-higher-order-function/)**
+
+1. Taking a function as an argument
+2. Returning a function
