--- a/日志/2020/0413-0419.md
+++ b/日志/2020/0413-0419.md
@@ -20,3 +20,86 @@
 
 ---
 
+**[What's new in ECMAScript 2020](https://www.strictmode.io/articles/whats-new-es2020/)**
+
+Dynamic import()
+```
+// ...
+const mod = figure.kind === "rectangle" ? "rectangle.js" : "circle.js";
+const { calcSquare } = await import(mod);
+console.log(calcSquare(figure));
+```
+
+Nullish coalescing
+```
+const initialVal = 0;
+
+// old way
+const myVar = initialVal || 10; // => 10
+
+// new way
+const myVar = initialVal ?? 10; // => 0
+```
+
+Optional chaining
+```
+const user = { name: "John" };
+
+// Fails with `Uncaught TypeError: Cannot read property 'city' of undefined`
+const city = user.address.city;
+
+// Works but verbose
+let city = "Not Set";
+if (user.address !== undefined && user.address !== null) {
+  city = user.address.city;
+}
+
+// Works and concise but requires a 3rd party library
+const city = _.get(user, "address.city", "Not Set");
+
+// 🤗
+const city = user?.address?.city ?? "Not Set";
+```
+
+BigInt
+```
+const x = 9007199254740991n;
+
+// or it can be constructed from a string
+const y = BigInt("9007199254740991234");
+```
+
+String.matchAll
+```
+const tweet = "#JavaScript is full of #surprises. Both good and bad ones #TIL";
+
+for (h of tweet.matchAll(/(#\w+)/g)) {
+  console.log(h[0]);
+}
+
+// or
+
+const tags = [...tweet.matchAll(/(#\w+)/g)]
+```
+
+Promise.allSettled
+The new allSettled behaves differently. It resolves whenever all of the promises finished working, that is, became either fulfilled or rejected. It resolves to an array that contains both the status of the promise and what it resolved to (or an error).
+
+Thus, allSettled is never rejected. It's either pending, or resolved.
+```
+// const urls = [...]
+try {
+  await Promise.all(urls.map(fetch))
+} catch (e) {
+  // at least one fetch is rejected here, but there may others still pending
+  // so it may be too early for removing the loading indicator
+  removeLoading()
+}
+
+// with allSettled
+await Promise.allSettled(urls.map(fetch))
+removeLoading()
+```
+
+globalThis
+The new globalThis property abstracts away the difference. Meaning that you can always refer to globalThis without caring in which context you are now.
