--- a/日志/2020/0504-0510.md
+++ b/日志/2020/0504-0510.md
@@ -40,3 +40,19 @@ window.location.port; // '8080'
 assign vs replace
 
 Both of these methods will help you redirect or navigate to another URL. The difference is assign will save your current page in history, so your user can use the "back" button to navigate to it. Whereas with replace method, it doesn't save it.
+
+---
+
+**[dark-mode-react-apps-styled-components](https://www.smashingmagazine.com/2020/04/dark-mode-react-apps-styled-components/)**
+
+```
+import { createGlobalStyle} from "styled-components"
+export const GlobalStyles = createGlobalStyle`
+  body {
+    background: ${({ theme }) => theme.body};
+    color: ${({ theme }) => theme.text};
+    font-family: Tahoma, Helvetica, Arial, Roboto, sans-serif;
+    transition: all 0.50s linear;
+  }
+  `
+```
