--- a/日志/2020/0525-0531.md
+++ b/日志/2020/0525-0531.md
@@ -14,3 +14,21 @@ The workflow of a WebGL program can be summarized like this:
 
 ---
 
+**[Electron 9.0.0](https://www.electronjs.org/blog/electron-9-0)**
+
+---
+
+**[Serverless Content Management System for Websites using Vue.js and AWS — Simple, Fast, Secure, Cheap](https://medium.com/@dan_22184/serverless-content-management-system-for-websites-using-vue-js-ac7e10081d2f)**
+
+---
+
+**[5 Differences Between Arrow and Regular Functions](https://dmitripavlutin.com/differences-between-arrow-and-regular-functions/)**
+
+- this value
+  - Regular function: dynamic
+  - Arrow function: lexically
+- Constructors
+  - Regular function: can easily construct objects
+  - Arrow function: A consequence of this resolved lexically is that an arrow function cannot be used as a constructor.
+- arguments object
+  - 
