--- a/日志/2020/0525-0531.md
+++ b/日志/2020/0525-0531.md
@@ -31,4 +31,6 @@ The workflow of a WebGL program can be summarized like this:
   - Regular function: can easily construct objects
   - Arrow function: A consequence of this resolved lexically is that an arrow function cannot be used as a constructor.
 - arguments object
-  - 
+  - Inside the body of a regular function, arguments is a special array-like object containing the list of arguments with which the function has been invoked.
+  - No arguments special keyword is defined inside an arrow function.
+- Implicit return
