--- a/日志/2020/0525-0531.md
+++ b/日志/2020/0525-0531.md
@@ -34,3 +34,48 @@ The workflow of a WebGL program can be summarized like this:
   - Inside the body of a regular function, arguments is a special array-like object containing the list of arguments with which the function has been invoked.
   - No arguments special keyword is defined inside an arrow function.
 - Implicit return
+
+---
+
+**[Hybrid 开发：JsBridge - Web 和客户端的桥](https://juejin.im/post/58cdeba62f301e007e4af7e6)**
+JSBridge多种形式
+- JavaScriptInterface
+- 改写浏览器原有对象: 这个方法主要是通过修改原来浏览器的window某些方法，然后拦截固定规则的参数，然后分发给Java对应的方法去处理。这里常用的是以下四个方法：
+  - alert，可以被webview的onJsAlert监听
+  - confirm，可以被webview的onJsConfirm监听
+  - console.log，可以被webview的onConsoleMessage监听
+  - prompt，可以被webview的onJsPrompt监听
+- URL scheme
+
+唤起APP技术
+- 安卓intent
+- 安卓localserver
+- Universal links / Deep link / Applink
+- Universal Links
+- Deep link / Applink
+- smart app banner
+
+---
+
+**[JSBridge的原理](https://juejin.im/post/5abca877f265da238155b6bc)**
+JavaScript 调用 Native 的方式，主要有两种：注入 API 和 拦截 URL SCHEME。
+
+---
+
+**[浏览器渲染引擎Webkit和V8引擎工作原理](https://segmentfault.com/a/1190000018806562#item-9)**
+
+---
+
+**[你真的理解setState吗？](https://juejin.im/post/5b45c57c51882519790c7441#comment)**
+
+---
+
+**[浏览器的工作原理：新式网络浏览器幕后揭秘](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/#Layered_representation)**
+
+---
+
+**[图解浏览器的基本工作原理](https://zhuanlan.zhihu.com/p/47407398)**
+
+---
+
+**[V8 Ignition：JS 引擎与字节码的不解之缘](https://cnodejs.org/topic/59084a9cbbaf2f3f569be482)**
