--- a/日志/2020/0601-0607.md
+++ b/日志/2020/0601-0607.md
@@ -4,3 +4,12 @@
 - Swtiching to TypeScript.
 - Overcoming the bottleneck of virtual DOM.
 - Minimizing bundle size.
+
+---
+
+**[Git hooks](https://blog.gitguardian.com/git-hooks-automated-secrets-detection/?gclid=EAIaIQobChMIo6KW2uPf6QIVi4bACh3dkwOBEAAYASAAEgIJGfD_BwE)**
+
+- pre-commit
+- post-commit
+- pre-receive
+- post-receive
