--- a/日志/2020/0622-0628.md
+++ b/日志/2020/0622-0628.md
@@ -16,3 +16,7 @@
 6. git stash pop ：命令恢复之前缓存的工作目录，将缓存堆栈中的对应stash删除，并将对应修改应用到当前的工作目录下,默认为第一个stash,即stash@{0}，如果要应用并删除其他stash，命令：`git stash pop stash@{$num}` ，比如应用并删除第二个：`git stash pop stash@{1}`
 7. git stash drop stash@{$num} ：丢弃stash@{$num}存储，从列表中删除这个存储
 8. git stash clear ：删除所有缓存的stash
+
+---
+
+**[从 Element UI 源码的构建流程来看前端 UI 库设计](https://juejin.im/post/5ef173c051882565bf507c2d)**
