--- a/日志/2020/0629-0705.md
+++ b/日志/2020/0629-0705.md
@@ -30,5 +30,21 @@
 工作流程：
 ![工作流程](https://user-gold-cdn.xitu.io/2020/6/30/173028a7faecdf3d?imageslim)
 
-路由劫持:
+路由劫持：
+icestark 对两类路由事件进行了接触，一类为 history API 中的 popstate 和 hashChange，另一类是 window 上的路由事件 pushState 和 replaceState，这两个事件在浏览器上进行前进后退操作的时候会触发。
 ![路由](https://user-gold-cdn.xitu.io/2020/6/30/173028a861d85aa9?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+应用间通信：
+![通信](https://user-gold-cdn.xitu.io/2020/6/30/173028a8a350a3e5?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+样式隔离：
+![样式](https://user-gold-cdn.xitu.io/2020/6/30/173028a8d9d99eb2?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+脚本隔离：
+Prxoy 沙箱的基本原理是通过 with + new Function 的形式阻断代码中对于 window 的直接访问，并通过 Proxy 的方式拦截对于 window 变量的访问和写入，沙箱的隔离使代码不能直接访问到 window 对象，通过ES6 的新特性 Proxy 可以定制 get/set 的逻辑，这样就能对 window 上的一些全局变量变化进行快照记录，以便微应用切换的时候进行恢复。
+![脚本](https://user-gold-cdn.xitu.io/2020/6/30/173028a8d9cbbc6e?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+三方隔离：iframe
+
+---
+
