--- a/阅读笔记/编译原理/课程/第二讲：语言及其文法.md
+++ b/阅读笔记/编译原理/课程/第二讲：语言及其文法.md
@@ -40,3 +40,22 @@ G = (VT , VN , P , S )
 - 字母表中排在后面的小写字母（主要是u、v、. . . 、z）表示终结符号串（包括空串）
 - 小写希腊字母，如α、β、γ，表示文法符号串（包括空串）
 - 除非特别说明，第一个产生式的左部就是开始符号
+
+推导和归约：
+给定文法G=(VT , VN , P , S )，如果 α→β ∈ P，那么可以将符号串γαδ中的α替换为β，也就是说，将γαδ 重写(rewrite)为γβδ，记作 γαδ ⇒ γβδ。此时，称文法中的符号串 γαδ 直接推导(directly derive)出 γβδ。
+简而言之，就是用产生式的右部替换产生式的左部。
+归约是推导的逆过程。
+
+如何判定某一词串是否是该语言的句子？
+- 句子的推导（派生）-从生成语言的角度
+- 句子的归约 -从识别语言的角度
+
+句型：
+如果 S ⇒* α，α∈(VT∪VN)*，则称α是G的一个句型(sentential form)。一个句型中既可以包含终结符，又可以包含非终结符，也可能是空串。
+
+句子：
+如果 S ⇒* w，w ∈VT*，则称w是G的一个句子(sentence)。句子是不包含非终结符的句型。
+
+语言的形式化定义：
+由文法G的开始符号S推导出的所有句子构成的集合称为文法G生成的语言，记为L(G )。即
+L(G )= {w | S ⇒* w, w∈ VT* }
