--- a/阅读笔记/编译原理/课程/第二讲：语言及其文法.md
+++ b/阅读笔记/编译原理/课程/第二讲：语言及其文法.md
@@ -42,7 +42,7 @@ G = (VT , VN , P , S )
 - 除非特别说明，第一个产生式的左部就是开始符号
 
 推导和归约：
-给定文法G=(VT , VN , P , S )，如果 α→β ∈ P，那么可以将符号串γαδ中的α替换为β，也就是说，将γαδ 重写(rewrite)为γβδ，记作 γαδ ⇒ γβδ。此时，称文法中的符号串 γαδ 直接推导(directly derive)出 γβδ。
+给定文法G=(VT , VN , P , S)，如果 α→β ∈ P，那么可以将符号串γαδ中的α替换为β，也就是说，将γαδ 重写(rewrite)为γβδ，记作 γαδ ⇒ γβδ。此时，称文法中的符号串 γαδ 直接推导(directly derive)出 γβδ。
 简而言之，就是用产生式的右部替换产生式的左部。
 归约是推导的逆过程。
 
@@ -57,5 +57,32 @@ G = (VT , VN , P , S )
 如果 S ⇒* w，w ∈VT*，则称w是G的一个句子(sentence)。句子是不包含非终结符的句型。
 
 语言的形式化定义：
-由文法G的开始符号S推导出的所有句子构成的集合称为文法G生成的语言，记为L(G )。即
-L(G )= {w | S ⇒* w, w∈ VT* }
+由文法G的开始符号S推导出的所有句子构成的集合称为文法G生成的语言，记为L(G)。即
+L(G)= {w | S ⇒* w, w∈ VT* }
+
+文法的分类：
+- 0型文法 (Type-0 Grammar)：无限制文法(Unrestricted Grammar) /短语结构文法(Phrase Structure Grammar, PSG )
+  - ∀α → β∈P， α中至少包含1个非终结符
+  - 0型语言：由0型文法G生成的语言L(G)
+- 1型文法 (Type-1 Grammar)
+  - 上下文有关文法(Context-Sensitive Grammar , CSG)
+  - 产生式的一般形式： α1Aα2 → α1βα2 ( β≠ε )
+  - 上下文有关语言（1型语言）：由上下文有关文法 (1型文法) G生成的语言L(G)
+- 2型文法 (Type-2 Grammar)
+  - 上下文无关文法 (Context-Free Grammar, CFG)
+  - 产生式的一般形式：A→β
+  - 上下文无关语言（2型语言）：由上下文无关文法 (2型文法) G生成的语言L(G) 
+- 3型文法 (Type-3 Grammar)
+  - 正则文法 (Regular Grammar, RG)
+  - 右线性(Right Linear)文法：A→wB 或 A→w
+  - 左线性(Left Linear)文法：A→Bw 或 A→w
+  - 左线性文法和右线性文法都称为正则文法
+  - 正则语言（3型语言）：由正则文法 (3型文法) G生成的语言L(G)
+
+四种文法之间的关系：
+- 逐级限制：
+  - 0型文法：α中至少包含1个非终结符
+  - 1型文法（CSG） ：｜α｜≤｜β｜
+  - 2型文法（CFG） ：α ∈ VN 
+  - 3型文法（RG）：A→wB 或 A→w   (A→Bw 或A→w)
+- 逐级包含
