--- a/阅读笔记/编译原理/课程/第二讲：语言及其文法.md
+++ b/阅读笔记/编译原理/课程/第二讲：语言及其文法.md
@@ -86,3 +86,21 @@ L(G)= {w | S ⇒* w, w∈ VT* }
   - 2型文法（CFG） ：α ∈ VN 
   - 3型文法（RG）：A→wB 或 A→w   (A→Bw 或A→w)
 - 逐级包含
+
+分析树：
+- 根节点的标号为文法开始符号
+- 内部结点表示对一个产生式A→β的应用，该结点的标号是此产生式左部A 。该结点的子结点的标号从左到右构成了产生式的右部β
+- 叶结点的标号既可以是非终结符，也可以是终结符。从左到右排列叶节点得到的符号串称为是这棵树的产出( yield )或边缘(frontier) 
+
+(句型的）短语：
+- 给定一个句型，其分析树中的每一棵子树的边缘称为该句型的一个短语(phrase)
+- 如果子树只有父子两代结点，那么这棵子树的边缘称为该句型的一个直接短语(immediate phrase) 
+- 直接短语一定是某产生式的右部，但产生式的右部不一定是给定句型的直接短语
+
+二义性文法：
+如果一个文法可以为某个句子生成多棵分析树，则称这个文法是二义性的
+
+消歧规则：
+每个else和最近的尚未匹配的if匹配
+
+对于任意一个上下文无关文法，不存在一个算法，判定它是无二义性的；但能给出一组充分条件，满足这组充分条件的文法是无二义性的
