--- a/日志/2020/0720-0726.md
+++ b/日志/2020/0720-0726.md
@@ -7,3 +7,15 @@
 - globalThis
 - Promise.all 缺陷
 - Promise.allSettled
+
+---
+
+**[如何理解持续集成、持续交付、持续部署？](https://www.zhihu.com/question/23444990)**
+
+---
+
+**[CI/CD是什么？如何理解持续集成、持续交付和持续部署](https://www.redhat.com/zh/topics/devops/what-is-ci-cd)**
+
+---
+
+**[A Simple Explanation of Event Delegation in JavaScript](https://dmitripavlutin.com/javascript-event-delegation/)**
