--- a/日志/2020/0720-0726.md
+++ b/日志/2020/0720-0726.md
@@ -19,3 +19,11 @@
 ---
 
 **[A Simple Explanation of Event Delegation in JavaScript](https://dmitripavlutin.com/javascript-event-delegation/)**
+
+---
+
+**[Generating UUIDs at scale on the Web](https://medium.com/teads-engineering/generating-uuids-at-scale-on-the-web-2877f529d2a2)**
+
+Why we need client-side unique identifiers？
+Generating unique identifiers is a common need that third-party scripts integrated on Web pages and e-commerce sites have for analytics, marketing purposes, or advertising.
+
