--- a/日志/2020/0720-0726.md
+++ b/日志/2020/0720-0726.md
@@ -27,3 +27,7 @@
 Why we need client-side unique identifiers？
 Generating unique identifiers is a common need that third-party scripts integrated on Web pages and e-commerce sites have for analytics, marketing purposes, or advertising.
 
+---
+
+**[What difference between statement coverage and line coverage](https://www.froglogic.com/coco/statement-coverage/#:~:text=100%25%20Statement%20Coverage%20implies%20100,is%20false%20from%20the%20start)**
+100% Statement Coverage implies 100% Line Coverage. But the opposite is not true: a line may contain multiple statements whereas a test may not succeed in executing all of them. The following example shows a line with two statements where the latter one is skipped if the variable done  is false from the start.
