--- a/日志/2020/0727-0802.md
+++ b/日志/2020/0727-0802.md
@@ -10,3 +10,11 @@
 ---
 
 **[Webpack: A gentle introduction](https://ui.dev/webpack/)**
+
+---
+
+**[different between Object.toString and Object.prototype.toString](https://stackoverflow.com/questions/26333923/different-between-object-tostring-and-object-prototype-tostring)**
+
+---
+
+**[Why can Object.prototype.toString.call(foo) detect foo's type?](https://stackoverflow.com/questions/28881720/why-can-object-prototype-tostring-callfoo-detect-foos-type)**
