--- a/日志/2020/0727-0802.md
+++ b/日志/2020/0727-0802.md
@@ -18,3 +18,28 @@
 ---
 
 **[Why can Object.prototype.toString.call(foo) detect foo's type?](https://stackoverflow.com/questions/28881720/why-can-object-prototype-tostring-callfoo-detect-foos-type)**
+
+---
+
+**[Speculation in JavaScriptCore](https://webkit.org/blog/10308/speculation-in-javascriptcore/)**
+
+---
+
+**[What The... is 'Composition'?](https://whatthefork.is/composition#composition-in-math)**
+
+---
+
+**[Convert an Array into an Object in JavaScript](https://masteringjs.io/tutorials/fundamentals/array-to-object)**
+
+```javascript
+const obj = Object.assign({}, arr);
+
+obj instanceof Object; // true
+Array.isArray(obj); // false
+
+obj; // { '0': 'hello', '1': 'world' }
+```
+
+---
+
+**[【Deno】初识Deno](https://juejin.im/post/6844904162422063111)**
