--- a/阅读笔记/编译原理/课程/第三讲：词法分析.md
+++ b/阅读笔记/编译原理/课程/第三讲：词法分析.md
@@ -22,3 +22,8 @@ FA模型：
 最长子串匹配原则(Longest String Matching Principle)：
 - 当输入串的多个前缀与一个或多个模式匹配时，总是选择最长的前缀进行匹配
 - 在到达某个终态之后，只要输入带上还有符号，DFA就继续前进，以便寻找尽可能长的匹配
+
+FA的分类:
+- 确定的FA (Deterministic finite automata, DFA)
+- 非确定的FA (Nondeterministic finite automata, NFA)
+
