--- a/日志/2020/0803-0809.md
+++ b/日志/2020/0803-0809.md
@@ -89,3 +89,7 @@ CPU 使用率主要包含以下几个方面：
 4. 为进程设置资源限制：使用 Linux cgroups 来设置进程的 CPU 使用上限，可以防止由于某个应用自身的问题，而耗尽系统资源。
 5. NUMA 优化：支持 NUMA 的处理器会被划分为多个 Node，每个 Node 有本地的内存空间，这样 CPU 可以直接访问本地空间内存。
 6. 中断负载均衡：无论是软中断还是硬中断，它们的中断处理程序都可能会耗费大量的 CPU。开启 irqbalance 服务或者配置 smp_affinity，就可以把中断处理过程自动负载均衡到多个 CPU 上。
+
+---
+
+**[Typescript 设计模式之工厂方法](https://mp.weixin.qq.com/s/fZd53Nq9mptWTpyD9aXBYA)**
