--- a/日志/2020/0907-0913.md
+++ b/日志/2020/0907-0913.md
@@ -1,1 +1,9 @@
 **[Mastering Hard Parts of JavaScript: Callbacks I](https://dev.to/ryanameri/mastering-hard-parts-of-javascript-callbacks-i-3aj0)**
+
+---
+
+**[React Native之原理浅析](http://blog.poetries.top/2019/10/02/rn-yuanli/)**
+
+---
+
+**[React Fiber](https://juejin.im/post/6844903582622285831)**
