--- a/日志/2020/0921-0927.md
+++ b/日志/2020/0921-0927.md
@@ -9,3 +9,17 @@ React Native的初始化分为几个步骤
 原生代码初始化主要分两步
 - 静态加载。iOS没有动态加载原生代码的接口，所有的代码都在编译的初期就已经编译为静态代码并且链接好，程序启动的时候所有的原生代码都会加载好。这是原生代码的静态加载，iOS里面没有动态加载原生代码的概念，这也是为何没有静态代码热更新的原因
 - RN模块解析和注入JS。这是加载的第二步。在RootView初始化的时候会遍历所有被标记为RCTModule的原生模块，生成一个json格式的模块信息，里面包含模块名称和方法名称，然后注入到JS Engine, 由MessageQueue记录下来。原生代码在生成json模块信息的时候同时会在原生代码这边维护一个名称字典，用来把模块和方法的名称映射到原生代码的地址上去，用于JS调用原生代码的翻译
+
+Javascript环境初始化
+- RN的初始化是从RCRootView开始的，所有的绘制都会在这个RootView里面进行(Alert除外)
+- RootView做的第一件事情就是初始化一个空的JS Engine。
+
+JS Engine不直接管理UI的绘制
+- 所有的绘制由原生控制的UI事件和Timer触发
+- 影响界面刷新的事件发生以后一部分直接由原生控件消化掉，直接更新原生控件。剩下的部分会通过Bridge派发给MessageQueue，然后在JS层进行业务逻辑的计算，再由React来进行Virtual Dom的管理和更新。Virtual Dom再通过MessageQueue发送重绘指令给对应的原生组件进行UI更新
+
+React Native有三个重要的线程:
+- Shadow queue. 布局引擎(yoga)计算布局用的
+- Main thread. 主线程。就是操作系统的UI线程。无论是iOS还是android，一个进程都只有一个UI线程，我们常说的主线程. React Native所有UI绘制也是由同一个UI线程来维护
+- Javascript thread. javascript线程。 大家都知道javascript是单线程模型，event驱动的异步模型。React Native用了JS引擎，所以也必需有一个独立的js 线程. 所有JS和原生代码的交互都发生在这个线程里。死锁，异常也最容易发生在这个线程
+
